src/OpenCvSharp/Internal/Interop/NativeMethods.Face.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_load_model")]
        internal static partial int FaceFacemarkLoadModel(IntPtr facemark, byte[] modelPath);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit")]
        internal static partial int FaceFacemarkFit(IntPtr facemark, IntPtr image, int[] faces, int faceCount, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit_landmarks_count")]
        internal static partial int FaceFacemarkFitLandmarksCount(IntPtr facemark, out int faceCount, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit_landmarks_fill")]
        internal static partial int FaceFacemarkFitLandmarksFill(IntPtr facemark, int[] landmarkOffsets, int landmarkOffsetCapacity, float[] landmarksBuffer, int landmarkPointCapacity, out int faceCount, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_add_sample")]
        internal static partial int FaceFacemarkTrainAddSample(IntPtr facemark, IntPtr image, float[] landmarks, int landmarkCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_training")]
        internal static partial int FaceFacemarkTrainTraining(IntPtr facemark);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_get_faces_count")]
        internal static partial int FaceFacemarkTrainGetFacesCount(IntPtr facemark, IntPtr image, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_get_faces_fill")]
        internal static partial int FaceFacemarkTrainGetFacesFill(IntPtr facemark, IntPtr image, int[] faces, int faceCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_save")]
        internal static partial int FaceFacemarkSave(IntPtr facemark, byte[] path);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_lbf_create")]
        internal static partial int FaceFacemarkLBFCreate(int nLandmarks, int initShapeN, int stagesN, int treeN, int treeDepth, double shapeOffset, double baggingOverlap, int verbose, out IntPtr facemark);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_lbf_create_ex")]
        internal static partial int FaceFacemarkLBFCreateEx(int nLandmarks, int initShapeN, int stagesN, int treeN, int treeDepth, double shapeOffset, double baggingOverlap, int verbose, int saveModel, uint seed, byte[] cascadeFace, byte[] modelFilename, int[] featsM, int featsCount, double[] radiusM, int radiusCount, int[] leftPupil, int leftPupilCount, int[] rightPupil, int rightPupilCount, int detectRoiX, int detectRoiY, int detectRoiWidth, int detectRoiHeight, out IntPtr facemark);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_create")]
        internal static partial int FaceMaceCreate(int imgSize, out IntPtr mace);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_load")]
        internal static partial int FaceMaceLoad(byte[] filename, byte[] objname, out IntPtr mace);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_salt")]
        internal static partial int FaceMaceSalt(IntPtr mace, byte[] passphrase);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_train")]
        internal static partial int FaceMaceTrain(IntPtr mace, IntPtr[] images, int imageCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_same")]
        internal static partial int FaceMaceSame(IntPtr mace, IntPtr query, out int same);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_save")]
        internal static partial int FaceMaceSave(IntPtr mace, byte[] path);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_empty")]
        internal static partial int FaceMaceEmpty(IntPtr mace, out int empty);
    }
}
#endif
